--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-Result Size: 497 x 508
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,12 +10,12 @@ Result Size: 497 x 508
   text-align: center;
   font-family: arial;
 }
-​
+
 .title {
   color: grey;
   font-size: 18px;
 }
-​
+
 button {
   border: none;
   outline: 0;
@@ -31,10 +28,34 @@ button {
   width: 100%;
   font-size: 18px;
 }
-​
+
 a {
   text-decoration: none;
   font-size: 22px;
   color: black;
 }
-​
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+</style>
+</head>
+<body>
+
+<h2 style="text-align:center">User Profile Card</h2>
+
+<div class="card">
+  <img src="https://cdn1.iconfinder.com/data/icons/website-internet/48/website_-_female_user-512.png" alt="John" style="width:100%">
+  <h1>venky</h1>
+  <p>legged</p>
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><button>Contact</button></p>
+</div>
+
+</body>
+</html>
